--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<title>Home Page</title>
 <style>
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,400i');
 @import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah');
